--- a/Open.Threading.Tasks.csproj
+++ b/Open.Threading.Tasks.csproj
@@ -27,11 +27,19 @@ Part of the "Open" set of libraries.</Description>
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
   <ItemGroup>
+    <None Remove=".editorconfig" />
     <None Remove=".git" />
     <None Remove=".gitignore" />
     <None Remove="LICENSE" />
-    <None Remove="README.md" />
+    <AdditionalFiles Include=".editorconfig" />
     <None Include="logo.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
